[package]
name = "term_cursor"
description = "A crate for handling terminal cursor movement in a platform independent way."
version = "0.1.4"
authors = ["Daniel Hauser <daniel.hauser@liwest.at>"]
tags = ["terminal", "cursor", "position", "movement", "windows", "ansi"]
license = "MIT"
repository = "https://github.com/Lisoph/term_cursor"
readme = "README.md"

[target."cfg(windows)".dependencies]
winapi = "0.3.4"
kernel32-sys = "0.2.2"

[target."cfg(not(windows))".dependencies]
termios = "0.3.0"
