[package]
name = "term_cursor"
description = "A crate for handling terminal cursor movement in a platform independent way."
version = "0.2.1"
authors = ["Daniel Hauser <daniel.hauser@liwest.at>"]
keywords = ["terminal", "console", "cursor", "caret"]
license = "MIT"
repository = "https://github.com/Lisoph/term_cursor"
readme = "README.md"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.5", features = ["minwindef", "winbase", "wincon", "processenv"] }

[target."cfg(not(windows))".dependencies]
termios = "0.3.0"
